<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    app:cardElevation="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_logout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout_confirm_title"
            android:textColor="@color/slate_900"
            android:textSize="@dimen/title"
            android:textStyle="bold"
            android:layout_marginBottom="12dp" />

        <TextView
            android:id="@+id/tv_logout_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout_confirm_msg"
            android:textColor="@color/slate_600"
            android:textSize="@dimen/body_one"
            android:textAlignment="center"
            android:layout_marginBottom="32dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btn_logout_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/input_height"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button_slate_bg"
                app:backgroundTint="@null"
                android:text="@string/btn_cancel"
                android:textAllCaps="false"
                android:textColor="@color/slate_900"
                android:textSize="@dimen/header_three"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_logout_confirm"
                android:layout_width="0dp"
                android:layout_height="@dimen/input_height"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:background="@drawable/button_red_bg"
                app:backgroundTint="@null"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/header_three"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
