<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cart_container_bg"
    android:padding="8dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.60" />

    <TextView
        android:id="@+id/total_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/label_total_colon"
        android:textSize="@dimen/body_one"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_amount"
        android:textSize="@dimen/body_one"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/vertical_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:id="@+id/column_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dp"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_checkout"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/bg_button_green"
            app:backgroundTint="@null"
            android:text="@string/btn_checkout"
            android:textAllCaps="false"
            android:textSize="@dimen/body_two"
            android:textColor="@android:color/white"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="0dp" />

        <Button
            android:id="@+id/btn_clean_cart"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/bg_button_red"
            app:backgroundTint="@null"
            android:text="@string/btn_clean_cart"
            android:textAllCaps="false"
            android:textSize="@dimen/body_two"
            android:textColor="@android:color/white"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="0dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>